add routing and layout

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -3,5 +3,6 @@
     <span>QualitatDev</span>
     <a mat-flat-button routerLink="/debug" color="primary">Debug</a>
     <a mat-flat-button routerLink="/device" color="primary">Dispositivos</a>
+    <a mat-flat-button routerLink="/login" color="primary">login</a>
   </mat-toolbar-row>
 </mat-toolbar>
